tests/neg/recursive-type.jo
type A = A => Any
type B = B => Int

def test(a: B): A = a // error
